--- a/README.org
+++ b/README.org
@@ -1,4 +1,5 @@
 * Action diagram generator
+Disclaimer: I made this project when I was learning Javascript/HTML/CSS, it's riddled with beginner errors.
 Translate pseudo code to action diagrams.
 Currently only supports French.
 
