--- a/README.org
+++ b/README.org
@@ -1,5 +1,7 @@
+* Disclaimer
+- I made this project when I was learning Javascript, it's riddled with beginner errors and the UI is bare & simple html/css.
+
 * Action diagram generator
-- Disclaimer: I made this project when I was learning Javascript/HTML/CSS, it's riddled with beginner errors.
 - Translate pseudo code to action diagrams.
 - Currently only supports French.
 
